--- a/build.gradle
+++ b/build.gradle
@@ -25,17 +25,16 @@ repositories {
 }
 
 dependencies {
-    // todo : 설정 파일 재정비
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    /** KAFKA **/
+    implementation 'org.springframework.kafka:spring-kafka'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    testImplementation('org.springframework.kafka:spring-kafka-test') {
-        exclude group: 'org.rocksdb', module: 'rocksdbjni'
-    }
 }
 
 tasks.named('test') {
