--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    /** DATABASE **/
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
     /** KAFKA **/
     implementation 'org.springframework.kafka:spring-kafka'
 
@@ -39,4 +43,9 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+configurations.all {
+    exclude group: 'org.apache.kafka', module: 'kafka-streams'
+    exclude group: 'org.rocksdb', module: 'rocksdbjni'
 }
