--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,4 +31,5 @@ spring:
         batch.size: 32768
         # 전송 시간 한도
         delivery.timeout.ms: 120000
+        counting.interceptor.window.size.ms: 1000
     topic: trx-created.v1
